fix: keep scrollbar when you open the modal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 html {
-  scrollbar-gutter: stable;
+  overflow-y: scroll;
+}
+
+html body[data-scroll-locked] {
+  margin-right: 0 !important;
+  padding-right: 0 !important;
 }
 
 body {
